--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #686565;
+    background-color: rgb(235, 199, 152);
+
+ 
+   
 }
 
 .light-bulb-container {
@@ -13,22 +16,33 @@ body {
    margin-top: 370px;
    height: 40px;
    width: 90px;
-  border: solid 2px rgb(93, 93, 95);
+  border: solid 2px white;  
   font-size: 17px;
   border-radius: 50px;
+  height: 90px;
+  width: 90px;
+  font-size: 13px;
   
 }
 
 button {
    background-color: rgb(93, 93, 95);
+ 
+  
+  
 }
 
 button:hover {
-    background-color: rgb(200, 255, 0);
-    border: solid 2px rgb(171, 196, 82);
+    background-color: #3a3124 ;
+    border: solid 2px #1a150f ;
+    color: rgb(235, 199, 152);
+
+  
+  
+    
 }
 
 #lightBulb {
-    width: 200px; /* Adjust size as needed */
+    width: 200px; 
     transition: transform 0.2s ease-in-out;
 }
