--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 
 button:hover {
     background-color: #3a3124;
-    border: solid 2px #1a150f;
+    border: solid 2px #14110d;
     color: rgb(240, 207, 165);
 
 }
